var searchData=
[
  ['amountofparticipants_0',['AmountOfParticipants',['../classg_r_p_c_client_1_1_response_mark_attendance.html#a9ff0647fe1874f51dbd7b7cb48685633',1,'gRPCClient::ResponseMarkAttendance']]],
  ['answer_1',['answer',['../classg_r_p_c_client_1_1_hand_in_homework.html#a540a020534641b89a634eb9440c93e2d',1,'gRPCClient.HandInHomework.Answer'],['../classg_r_p_c_client_1_1_request_create_hand_in_homework.html#a2b0913dd86c32069fe96333bf59eb9c2',1,'gRPCClient.RequestCreateHandInHomework.Answer'],['../class_domain_1_1_d_t_os_1_1_homework_d_t_o_1_1_homework_hand_in_d_t_o.html#ad36bec2fb3fb0fbd671fd163334979c3',1,'Domain.DTOs.HomeworkDTO.HomeworkHandInDTO.Answer'],['../class_domain_1_1_models_1_1_hand_in_homework.html#ad78fe95ef977f24cbf069429f4ebfe58',1,'Domain.Models.HandInHomework.Answer']]],
  ['attendees_2',['attendees',['../classg_r_p_c_client_1_1_lesson_data.html#a8f9b59783261d2aa7165ebf445cbb741',1,'gRPCClient.LessonData.Attendees'],['../class_domain_1_1_models_1_1_lesson.html#a738950b24553e998dd22c3036ac34b75',1,'Domain.Models.Lesson.Attendees']]]
];
